--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
       "QueryBuilder\\": "src/QueryBuilder"
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
