--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
       "QueryBuilder\\": "src/QueryBuilder"
     }
   },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
