--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "osi-open-source/lumen-query-builder-filters",
   "description": "Query Builder Filters API client",
   "license": "MIT",
+  "version": "master",
   "authors": [
     {
       "name": "OSI WebTeam",
