--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
-    "illuminate/support": ">=5.5.0"
+    "php": "^7.2.5",
+    "illuminate/support": ">=8.0.0"
   },
   "autoload": {
     "psr-4": {
