--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": "^7.2.5",
-    "illuminate/support": ">=8.0.0"
+    "laravel/lumen-framework": "^7.0"
   },
   "autoload": {
     "psr-4": {
