--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     }
   ],
   "require": {
-    "php": "^7.2.5",
-    "laravel/lumen-framework": "^7.0"
+    "php": ">=7.2.0",
+    "laravel/lumen-framework": ">=7.0"
   },
   "autoload": {
     "psr-4": {
